Trying to fix some issues with the Flexbox on smaller screens

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -527,17 +527,18 @@ h3 {
   flex-direction: column;
 }
 
-.overview-impact, .overview-metrics {
-  flex-grow: 0;
-}
-
 .fb {
   order: 0;
-  flex-grow: 0;
 }
 
 .icons {
-  margin-left: 20px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.fb-card {
+  margin-left: auto;
+  margin-right: auto;
 }
 
 
